After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 619354 - [about-me] Don't hang when new and old password are too similar
[about-me] Don't hang when new and old password are too similar
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: [obsolete] about-me
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-05-22 10:15 UTC by Milan Bouchet-Valat
Modified: 2010-05-22 11:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[about-me] Don't hang when new and old password are too similar (1.54 KB, patch)
2010-05-22 10:15 UTC, Milan Bouchet-Valat
committed Details | Review

Description Milan Bouchet-Valat 2010-05-22 10:15:01 UTC
Yet another patch to avoid hanging when new password is too similar to the next one. I've applied this to users-admin, OK to commit here?
Comment 1 Milan Bouchet-Valat 2010-05-22 10:15:03 UTC
Created attachment 161712 [details] [review]
[about-me] Don't hang when new and old password are too similar

If new password is really close to the old one, 'passwd' says: "Bad: new password must be different than the old one". Handle this case too, instead of hanging.
Comment 2 Milan Bouchet-Valat 2010-05-22 11:29:35 UTC
Pushed as 5386702 (only numbers!), thanks for the feedback!