[about-me] Don't hang when new and old password are too similar

If new password is really close to the old one, 'passwd' says: "Bad: new password must be different than the old one". Handle this case too, instead of hanging.

https://bugzilla.gnome.org/show_bug.cgi?id=619354